--- a/Data Collection/AgriMarket.ipynb
+++ b/Data Collection/AgriMarket.ipynb
@@ -40,16 +40,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\sacer\\miniconda3\\envs\\asd1\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -105,14 +96,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [2], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m files_path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mdata_path\u001b[39m}\u001b[39;00m\u001b[39m/TB_TAT_KAMIS_PRC_MK_TB/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      3\u001b[0m files \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mlistdir(files_path)\n\u001b[1;32m----> 4\u001b[0m files\u001b[39m.\u001b[39;49mremove(\u001b[39m'\u001b[39;49m\u001b[39m.DS_Store\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(files)\n",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TB_TAT_KAMIS_PRC_MK_TB-2019.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2018.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2008.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2020.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2009.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2010.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2011.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2005.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2013.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2007.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2006.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2012.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2016.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2017.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2015.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2014.csv']\n"
      ]
     }
    ],
@@ -177,13 +164,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.loc[df[\"Product\"]==\"피마늘\", \"Product\"] = \"마늘\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Wholesale : 도매\n",
     "df_w = df[df['WR']=='도매']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -213,27 +209,6 @@
    "source": [
     "product_r = df_r['Product'].unique()\n",
     "product_r = product_r.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -355,7 +330,7 @@
        "array(['단감', '바나나', '참다래', '파인애플', '오렌지', '방울토마토', '고등어', '갈치', '명태',\n",
        "       '물오징어', '건멸치', '북어', '건오징어', '김', '건미역', '굴', '고구마', '감자', '배추',\n",
        "       '양배추', '시금치', '상추', '얼갈이배추', '수박', '오이', '호박', '토마토', '딸기', '무',\n",
-       "       '당근', '열무', '건고추', '풋고추', '붉은고추', '피마늘', '양파', '파', '생강', '미나리',\n",
+       "       '당근', '열무', '건고추', '풋고추', '붉은고추', '마늘', '양파', '파', '생강', '미나리',\n",
        "       '깻잎', '피망', '파프리카', '멜론', '느타리버섯', '팽이버섯', '새송이버섯', '사과', '배',\n",
        "       '레몬', '망고', '전복', '새우', '깐마늘(국산)', '감귤', '포도', '쌀', '찹쌀', '콩', '팥',\n",
        "       '녹두', '메밀', '참깨', '들깨', '땅콩', '쇠고기', '돼지고기', '닭고기', '계란', '수입조기',\n",
@@ -1070,7 +1045,430 @@
     }
    ],
    "source": [
-    "pd.concat([df, df_mei], axis=0)"
+    "df_market = pd.concat([df, df_mei], axis=0)\n",
+    "df_market"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crop_list = [\n",
+    "    \"호박\",\n",
+    "    \"고구마\",\n",
+    "    \"양파\",\n",
+    "    \"무\",\n",
+    "    \"배\",\n",
+    "    \"배추\",\n",
+    "    \"마늘\",\n",
+    "    \"양배추\",\n",
+    "    \"시금치\",\n",
+    "    \"콩\",\n",
+    "    \"땅콩\",\n",
+    "    \"풋고추\",\n",
+    "    \"오이\",\n",
+    "    \"깻잎\",\n",
+    "    \"생강\",\n",
+    "    \"사과\",\n",
+    "    \"포도\",\n",
+    "    \"당근\",\n",
+    "    \"복숭아\",\n",
+    "    \"미나리\",\n",
+    "    \"감자\",\n",
+    "    \"열무\",\n",
+    "    \"쌀\",\n",
+    "]\n",
+    "\n",
+    "len(crop_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YMD</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>WR</th>\n",
+       "      <th>Grade</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>M</th>\n",
+       "      <th>생산자물가지수(2010=100)</th>\n",
+       "      <th>소비자물가지수(2015=100)</th>\n",
+       "      <th>경상수지(백만US$)</th>\n",
+       "      <th>자본수지(백만US$)</th>\n",
+       "      <th>외환보유액(백만US$)</th>\n",
+       "      <th>수출액(백만US$)</th>\n",
+       "      <th>수입액(백만US$)</th>\n",
+       "      <th>환율(원/US$)</th>\n",
+       "      <th>실업률(%)</th>\n",
+       "      <th>콜금리(연%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>201901</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>고구마</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>상품</td>\n",
+       "      <td>41000.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>201901</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>고구마</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>36000.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>201901</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>감자</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>상품</td>\n",
+       "      <td>46000.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>201901</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>감자</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>36000.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>201901</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>감자</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>상품</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014512</th>\n",
+       "      <td>201412</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>배</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014513</th>\n",
+       "      <td>201412</td>\n",
+       "      <td>부산</td>\n",
+       "      <td>배</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014514</th>\n",
+       "      <td>201412</td>\n",
+       "      <td>대구</td>\n",
+       "      <td>배</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>26000.0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014515</th>\n",
+       "      <td>201412</td>\n",
+       "      <td>광주</td>\n",
+       "      <td>배</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014516</th>\n",
+       "      <td>201412</td>\n",
+       "      <td>대전</td>\n",
+       "      <td>배</td>\n",
+       "      <td>도매</td>\n",
+       "      <td>중품</td>\n",
+       "      <td>27000.0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5544603 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            YMD Region Product  WR Grade    Price     Y     M  \\\n",
+       "27       201901     서울     고구마  도매    상품  41000.0  2019   1.0   \n",
+       "28       201901     서울     고구마  도매    중품  36000.0  2019   1.0   \n",
+       "29       201901     서울      감자  도매    상품  46000.0  2019   1.0   \n",
+       "30       201901     서울      감자  도매    중품  36000.0  2019   1.0   \n",
+       "31       201901     서울      감자  도매    상품  50000.0  2019   1.0   \n",
+       "...         ...    ...     ...  ..   ...      ...   ...   ...   \n",
+       "1014512  201412     서울       배  도매    중품  30000.0  2014  12.0   \n",
+       "1014513  201412     부산       배  도매    중품  30000.0  2014  12.0   \n",
+       "1014514  201412     대구       배  도매    중품  26000.0  2014  12.0   \n",
+       "1014515  201412     광주       배  도매    중품  25000.0  2014  12.0   \n",
+       "1014516  201412     대전       배  도매    중품  27000.0  2014  12.0   \n",
+       "\n",
+       "         생산자물가지수(2010=100)  소비자물가지수(2015=100)  경상수지(백만US$)  자본수지(백만US$)  \\\n",
+       "27                     NaN                NaN          NaN          NaN   \n",
+       "28                     NaN                NaN          NaN          NaN   \n",
+       "29                     NaN                NaN          NaN          NaN   \n",
+       "30                     NaN                NaN          NaN          NaN   \n",
+       "31                     NaN                NaN          NaN          NaN   \n",
+       "...                    ...                ...          ...          ...   \n",
+       "1014512                NaN                NaN          NaN          NaN   \n",
+       "1014513                NaN                NaN          NaN          NaN   \n",
+       "1014514                NaN                NaN          NaN          NaN   \n",
+       "1014515                NaN                NaN          NaN          NaN   \n",
+       "1014516                NaN                NaN          NaN          NaN   \n",
+       "\n",
+       "         외환보유액(백만US$)  수출액(백만US$)  수입액(백만US$)  환율(원/US$)  실업률(%)  콜금리(연%)  \n",
+       "27                NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "28                NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "29                NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "30                NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "31                NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "...               ...         ...         ...        ...     ...      ...  \n",
+       "1014512           NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "1014513           NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "1014514           NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "1014515           NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "1014516           NaN         NaN         NaN        NaN     NaN      NaN  \n",
+       "\n",
+       "[5544603 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_market = df_market[df_market[\"Product\"].isin(crop_list)]\n",
+    "df_market"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_market[\"Product\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(crop_list) - set(df_market[\"Product\"])"
    ]
   },
   {
@@ -1097,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
