--- a/Data Analysis/AgriMarket_EDA_FINAL.ipynb
+++ b/Data Analysis/AgriMarket_EDA_FINAL.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1 = pd.read_csv(f'소비자물가지수_품목별_연도별_월별_filtered.csv')"
+    "df_1 = pd.read_csv('소비자물가지수_품목별_연도별_월별_filtered.csv')"
    ]
   },
   {
