--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -356,84 +356,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>577</th>\n",
-       "      <td>4792000000</td>\n",
-       "      <td>봉화</td>\n",
-       "      <td>PA080101</td>\n",
+       "      <th>276</th>\n",
+       "      <td>2629000000</td>\n",
+       "      <td>남구</td>\n",
+       "      <td>PA170201</td>\n",
        "      <td>봄</td>\n",
-       "      <td>당근</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>4772000000</td>\n",
-       "      <td>군위</td>\n",
-       "      <td>PA200101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>사과</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>327</th>\n",
-       "      <td>4690000000</td>\n",
-       "      <td>진도</td>\n",
-       "      <td>PA170101</td>\n",
-       "      <td>겨울</td>\n",
        "      <td>배추</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>426</th>\n",
-       "      <td>2914000000</td>\n",
-       "      <td>서구</td>\n",
-       "      <td>PA130201</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>무</td>\n",
+       "      <th>457</th>\n",
+       "      <td>4217051000</td>\n",
+       "      <td>동해</td>\n",
+       "      <td>PA120101</td>\n",
+       "      <td>한지형</td>\n",
+       "      <td>마늘</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>660</th>\n",
-       "      <td>4480000000</td>\n",
-       "      <td>홍성</td>\n",
-       "      <td>PA020101</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>감자</td>\n",
+       "      <th>599</th>\n",
+       "      <td>4684000000</td>\n",
+       "      <td>무안</td>\n",
+       "      <td>PA060101</td>\n",
+       "      <td>-</td>\n",
+       "      <td>녹두</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>5011000000</td>\n",
-       "      <td>제주</td>\n",
-       "      <td>PA280101</td>\n",
-       "      <td>가시계통</td>\n",
-       "      <td>오이</td>\n",
+       "      <th>9</th>\n",
+       "      <td>4817000000</td>\n",
+       "      <td>진주</td>\n",
+       "      <td>PA360101</td>\n",
+       "      <td>애호박</td>\n",
+       "      <td>호박</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>2714000000</td>\n",
-       "      <td>동구</td>\n",
-       "      <td>PA130401</td>\n",
-       "      <td>가을</td>\n",
-       "      <td>무</td>\n",
+       "      <th>46</th>\n",
+       "      <td>4471000000</td>\n",
+       "      <td>금산</td>\n",
+       "      <td>PA340101</td>\n",
+       "      <td>캠벨얼리</td>\n",
+       "      <td>포도</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>4277000000</td>\n",
-       "      <td>정선</td>\n",
+       "      <th>55</th>\n",
+       "      <td>4272000000</td>\n",
+       "      <td>홍천</td>\n",
        "      <td>PA330101</td>\n",
        "      <td>적두</td>\n",
        "      <td>팥</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>353</th>\n",
-       "      <td>4617000000</td>\n",
-       "      <td>나주</td>\n",
-       "      <td>PA160101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>배</td>\n",
+       "      <th>13</th>\n",
+       "      <td>4211000000</td>\n",
+       "      <td>춘천</td>\n",
+       "      <td>PA350101</td>\n",
+       "      <td>풋고추</td>\n",
+       "      <td>풋고추</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>548</th>\n",
-       "      <td>4690000000</td>\n",
-       "      <td>진도</td>\n",
-       "      <td>PA090401</td>\n",
-       "      <td>겨울대파</td>\n",
-       "      <td>대파</td>\n",
+       "      <th>449</th>\n",
+       "      <td>4617000000</td>\n",
+       "      <td>나주</td>\n",
+       "      <td>PA130201</td>\n",
+       "      <td>봄</td>\n",
+       "      <td>무</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>4514000000</td>\n",
+       "      <td>익산</td>\n",
+       "      <td>PA230101</td>\n",
+       "      <td>일반계</td>\n",
+       "      <td>쌀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>4421000000</td>\n",
+       "      <td>서산</td>\n",
+       "      <td>PA240301</td>\n",
+       "      <td>가을</td>\n",
+       "      <td>양배추</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -441,16 +441,16 @@
       ],
       "text/plain": [
        "         지역_아이디 지역_이름 주산지_작물_특성_아이디 주산지_작물_특성_이름 주산지_작물명\n",
-       "577  4792000000    봉화      PA080101            봄      당근\n",
-       "248  4772000000    군위      PA200101            -      사과\n",
-       "327  4690000000    진도      PA170101           겨울      배추\n",
-       "426  2914000000    서구      PA130201            봄       무\n",
-       "660  4480000000    홍성      PA020101            봄      감자\n",
-       "123  5011000000    제주      PA280101         가시계통      오이\n",
-       "417  2714000000    동구      PA130401           가을       무\n",
-       "58   4277000000    정선      PA330101           적두       팥\n",
-       "353  4617000000    나주      PA160101            -       배\n",
-       "548  4690000000    진도      PA090401         겨울대파      대파"
+       "276  2629000000    남구      PA170201            봄      배추\n",
+       "457  4217051000    동해      PA120101          한지형      마늘\n",
+       "599  4684000000    무안      PA060101            -      녹두\n",
+       "9    4817000000    진주      PA360101          애호박      호박\n",
+       "46   4471000000    금산      PA340101         캠벨얼리      포도\n",
+       "55   4272000000    홍천      PA330101           적두       팥\n",
+       "13   4211000000    춘천      PA350101          풋고추     풋고추\n",
+       "449  4617000000    나주      PA130201            봄       무\n",
+       "199  4514000000    익산      PA230101          일반계       쌀\n",
+       "159  4421000000    서산      PA240301           가을     양배추"
       ]
      },
      "metadata": {},
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -556,14 +556,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['쌀', '현미', '찹쌀', '보리쌀', '콩', '땅콩', '혼식곡', '배추', '상추', '시금치', '양배추', '미나리', '깻잎', '부추', '무', '열무', '당근', '감자', '고구마', '도라지', '콩나물', '버섯', '오이', '풋고추', '호박', '가지', '토마토', '파', '양파', '마늘', '브로콜리', '고사리', '파프리카', '생강', '사과', '배', '복숭아', '포도', '밤', '감', '귤', '오렌지', '참외', '수박', '딸기', '바나나', '키위']\n"
+      "['호박', '고구마', '양파', '무', '배', '배추', '마늘', '양배추', '시금치', '콩', '땅콩', '풋고추', '오이', '깻잎', '생강', '사과', '포도', '당근', '복숭아', '미나리', '감자', '열무', '쌀']\n"
      ]
     }
    ],
@@ -576,126 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>지역_아이디</th>\n",
-       "      <th>주산지_작물_특성_아이디</th>\n",
-       "      <th>주산지_작물명</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4211000000</td>\n",
-       "      <td>PA360101</td>\n",
-       "      <td>호박</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4211000000</td>\n",
-       "      <td>PA360201</td>\n",
-       "      <td>호박</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4272000000</td>\n",
-       "      <td>PA360101</td>\n",
-       "      <td>호박</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4272000000</td>\n",
-       "      <td>PA360201</td>\n",
-       "      <td>호박</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4278000000</td>\n",
-       "      <td>PA360201</td>\n",
-       "      <td>호박</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>673</th>\n",
-       "      <td>4827000000</td>\n",
-       "      <td>PA020301</td>\n",
-       "      <td>감자</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>674</th>\n",
-       "      <td>4887000000</td>\n",
-       "      <td>PA020101</td>\n",
-       "      <td>감자</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>675</th>\n",
-       "      <td>4888000000</td>\n",
-       "      <td>PA020101</td>\n",
-       "      <td>감자</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>676</th>\n",
-       "      <td>5011000000</td>\n",
-       "      <td>PA020301</td>\n",
-       "      <td>감자</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>677</th>\n",
-       "      <td>5013000000</td>\n",
-       "      <td>PA020301</td>\n",
-       "      <td>감자</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>508 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         지역_아이디 주산지_작물_특성_아이디 주산지_작물명\n",
-       "0    4211000000      PA360101      호박\n",
-       "1    4211000000      PA360201      호박\n",
-       "2    4272000000      PA360101      호박\n",
-       "3    4272000000      PA360201      호박\n",
-       "4    4278000000      PA360201      호박\n",
-       "..          ...           ...     ...\n",
-       "673  4827000000      PA020301      감자\n",
-       "674  4887000000      PA020101      감자\n",
-       "675  4888000000      PA020101      감자\n",
-       "676  5011000000      PA020301      감자\n",
-       "677  5013000000      PA020301      감자\n",
-       "\n",
-       "[508 rows x 3 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "SyntaxError",
+     "evalue": "'(' was never closed (197913989.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [13], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_code_filtered = df[df[\"주산지_작물명\"].isin(crop_list)][[\"지역_아이디\", \"주산지_작물_특성_아이디\", \"주산지_작물명\"]].drop_duplicates(subset=[\"지역_아이디\"]\u001b[0m\n\u001b[1;37m                                                                                                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m '(' was never closed\n"
+     ]
     }
    ],
    "source": [
@@ -707,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -736,14 +626,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def temp(crop_name, file_path=f\"../data/FmlandWthrInfo_code.csv\"):\n",
     "    df = pd.read_csv(file_path, index_col=False)\n",
-    "    df = df[df[\"주산지_작물명\"] == crop_name]\n",
-    "    \n",
+    "    df = df[df[\"주산지_작물명\"] == crop_name].drop_duplicates(subset=[\"지역_아이디\"])\n",
+    "    v=[]\n",
+    "    for idx in df.itertuples():\n",
+    "        v.append(idx[1:3])\n",
     "temp(\"감자\")"
    ]
   },
@@ -1379,15 +1271,6 @@
     "        PA_CROP_SPE_ID=\"PA130201\",\n",
     "    )\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if(start(prop(\"날짜\")) == end(prop(\"날짜\")), formatDate(start(prop(\"날짜\")), \"ddd\"), concat(formatDate(start(prop(\"날짜\")), \"ddd\"), \" → \", formatDate(end(prop(\"날짜\")), \"ddd\")))"
    ]
   }
  ],
