--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -1203,7 +1203,7 @@
     "            \"DaySum_Sunshine\": \"float\",\n",
     "            \"Warning_Count\": \"int\",\n",
     "        }\n",
-    "\n",
+    "        \n",
     "        df = df.astype(dict)\n",
     "\n",
     "        df[\"DayDiff_Temperature\"] = (\n",
@@ -1236,26 +1236,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 만든 함수로 데이터 가져오기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"Only a column name can be used for the key in a dtype mappings argument. 'DayAvg_Temperature' not found in columns.\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [32], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m crop_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m시금치\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2005\u001b[39m, \u001b[39m2021\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     df_api \u001b[39m=\u001b[39m Get_AgriWeather_All(authkey, search_Year_Period\u001b[39m=\u001b[39;49m(i, i), crop_name\u001b[39m=\u001b[39;49mcrop_name)\n\u001b[0;32m      5\u001b[0m     df_api\u001b[39m.\u001b[39mto_csv(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdata_path\u001b[39m}\u001b[39;00m\u001b[39mAgriWeather/AgriWeather_\u001b[39m\u001b[39m{\u001b[39;00mcrop_name\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m.csv\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn [30], line 37\u001b[0m, in \u001b[0;36mGet_AgriWeather_All\u001b[1;34m(authkey, search_Year_Period, crop_name, code_file_path, avg)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39mif\u001b[39;00m avg \u001b[39m==\u001b[39m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     25\u001b[0m     \u001b[39mdict\u001b[39m \u001b[39m=\u001b[39m {\n\u001b[0;32m     26\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mDayAvg_Temperature\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mfloat\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     27\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mDayMax_Temperature\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mfloat\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mWarning_Count\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mint\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     35\u001b[0m     }\n\u001b[1;32m---> 37\u001b[0m     df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mastype(\u001b[39mdict\u001b[39;49m)\n\u001b[0;32m     39\u001b[0m     df[\u001b[39m\"\u001b[39m\u001b[39mDayDiff_Temperature\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m (\n\u001b[0;32m     40\u001b[0m         df[\u001b[39m\"\u001b[39m\u001b[39mDayMax_Temperature\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m-\u001b[39m df[\u001b[39m\"\u001b[39m\u001b[39mDayMin_RelativeHumidity\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     41\u001b[0m     )\n\u001b[0;32m     43\u001b[0m     col_list \u001b[39m=\u001b[39m [\n\u001b[0;32m     44\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mYMD\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     45\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCrop_Name\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[39m# \"Warning_Code\",\u001b[39;00m\n\u001b[0;32m     57\u001b[0m     ]\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\generic.py:6217\u001b[0m, in \u001b[0;36mNDFrame.astype\u001b[1;34m(self, dtype, copy, errors)\u001b[0m\n\u001b[0;32m   6215\u001b[0m \u001b[39mfor\u001b[39;00m col_name \u001b[39min\u001b[39;00m dtype_ser\u001b[39m.\u001b[39mindex:\n\u001b[0;32m   6216\u001b[0m     \u001b[39mif\u001b[39;00m col_name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m:\n\u001b[1;32m-> 6217\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[0;32m   6218\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mOnly a column name can be used for the \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   6219\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mkey in a dtype mappings argument. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   6220\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcol_name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m not found in columns.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   6221\u001b[0m         )\n\u001b[0;32m   6223\u001b[0m dtype_ser \u001b[39m=\u001b[39m dtype_ser\u001b[39m.\u001b[39mreindex(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns, fill_value\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m   6225\u001b[0m results \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"Only a column name can be used for the key in a dtype mappings argument. 'DayAvg_Temperature' not found in columns.\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['마늘', '깻잎', '감자', '고구마']\n",
+      "['마늘', '깻잎', '감자', '고구마']\n"
      ]
     }
    ],
    "source": [
-    "crop_name = \"시금치\"\n",
+    "from definitions import crop_list2\n",
+    "\n",
+    "print(crop_list2)\n",
+    "\n",
+    "# crop_list2.remove('시금치')\n",
+    "\n",
+    "print(crop_list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop_name = \"고구마\"\n",
     "\n",
     "for i in range(2005, 2021):\n",
     "    df_api = Get_AgriWeather_All(authkey, search_Year_Period=(i, i), crop_name=crop_name)\n",
@@ -1267,7 +1285,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "crop_name = \"깻잎\"\n",
+    "\n",
+    "for i in range(2005, 2021):\n",
+    "    df_api = Get_AgriWeather_All(authkey, search_Year_Period=(i, i), crop_name=crop_name)\n",
+    "    df_api.to_csv(f\"{data_path}AgriWeather/AgriWeather_{crop_name}_{i}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../data/AgriWeather\\\\AgriWeather_마늘_2005.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2006.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2007.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2008.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2009.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2010.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2011.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2012.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2013.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2014.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2015.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2016.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2017.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2018.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2019.csv',\n",
+       " '../data/AgriWeather\\\\AgriWeather_마늘_2020.csv']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['../data/AgriWeather\\\\AgriWeather_고구마_2005.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2006.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2007.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2008.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2009.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2010.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2011.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2012.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2013.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2014.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2015.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2016.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2017.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2018.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2019.csv', '../data/AgriWeather\\\\AgriWeather_고구마_2020.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "# ['마늘', '깻잎', '감자', '고구마']\n",
+    "\n",
+    "crop_name = \"고구마\"\n",
+    "\n",
+    "files_path = f\"{data_path}AgriWeather/\"\n",
+    "\n",
+    "files = glob(f\"{files_path}/AgriWeather_{crop_name}*\")\n",
+    "print(files)\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "for file in files:\n",
+    "    df_n = pd.read_csv(f'{file}')\n",
+    "    df = pd.concat([df, df_n])\n",
+    "\n",
+    "df.to_csv(f\"{data_path}AgriWeather/AgriWeather_{crop_name}.csv\")"
+   ]
   }
  ],
  "metadata": {
