농업 기상 정보 코드 최종 갱신
제발

--- a/Data Collection/garak_auction.ipynb
+++ b/Data Collection/garak_auction.ipynb
@@ -9,7 +9,7 @@
     "import time\n",
     "import requests\n",
     "import xml.etree.ElementTree as ET\n",
-    "import math\n"
+    "import math"
    ]
   },
   {
@@ -85,8 +85,7 @@
     "    동화청과 : 11000104\n",
     "    한국청과 : 11000105\n",
     "    대아청과 : 11000106\n",
-    "    '''\n",
-    "            "
+    "    '''"
    ]
   },
   {
@@ -99,7 +98,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "asd1",
    "language": "python",
    "name": "python3"
   },
@@ -113,12 +112,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9d268cb7956bb84fc0274ccbb143d35389b26d51ddaa2a526d5eae67d93f8abb"
+    "hash": "07badbe185019afce09527cdf66b20ec507f3045aabcc27b0da70607b5630dc4"
    }
   }
  },
