csv 저장 경로 변경

--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -1245,13 +1245,12 @@
     }
    ],
    "source": [
-    "file_path = f\"{data_path}AgriWeather/\"\n",
     "for crop in crop_list2:\n",
     "    print(crop)\n",
     "    for y in range(2005, 2021):\n",
     "        print(y)\n",
     "        df = Get_AgriWeather_All(authkey=authkey, search_Year_Period=(y, y), crop_name=crop)\n",
-    "        df.to_csv(f\"{file_path}AgriWeather_{crop}_{y}_raw.csv\", index=False)"
+    "        df.to_csv(f\"{data_path}AgriWeather_{crop}_{y}_raw.csv\", index=False)"
    ]
   },
   {
@@ -1272,7 +1271,7 @@
    ],
    "source": [
     "for crop in crop_list2:\n",
-    "    files = glob(f\"{file_path}/AgriWeather_{crop}*\")\n",
+    "    files = glob(f\"{data_path}/AgriWeather_{crop}*\")\n",
     "    print(files)"
    ]
   },
@@ -1609,11 +1608,9 @@
     }
    ],
    "source": [
-    "file_path = f\"{data_path}AgriWeather/\"\n",
-    "\n",
     "df_raw = pd.DataFrame()\n",
     "for crop in crop_list2:\n",
-    "    files = glob(f\"{file_path}/AgriWeather_{crop}*\")\n",
+    "    files = glob(f\"{data_path}/AgriWeather_{crop}*\")\n",
     "    print(files)\n",
     "    for file in files:\n",
     "        df_new = pd.read_csv(f'{file}', index_col=False)\n",
@@ -1621,7 +1618,7 @@
     "        # 필요없는 파일 제거\n",
     "        os.remove(file)\n",
     "\n",
-    "df_raw.to_csv(f\"{file_path}AgriWeather_raw.csv\")\n",
+    "df_raw.to_csv(f\"{data_path}AgriWeather_raw.csv\")\n",
     "display(df_raw)"
    ]
   },
@@ -1956,14 +1953,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f\"{data_path}AgriWeather/\"\n",
-    "df.to_csv(f\"{file_path}AgriWeather.csv\")\n",
+    "# # 데이터 패스에 저장\n",
+    "df.to_csv(f\"{data_path}AgriWeather.csv\")\n",
+    "\n",
     "# 필요없는 파일 제거\n",
-    "os.remove(f\"{file_path}AgriWeather_raw.csv\")"
+    "# os.remove(f\"{data_path}AgriWeather_raw.csv\")"
    ]
   }
  ],
